--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body{
     font-family: 'system-ui';
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
 }
+
 
 main {
     margin: 0px;
@@ -39,7 +41,7 @@ h1, h2, h3, h4{
 	background-color: #fff;
     border: none;
     box-shadow: 14px 10px 0px -1px rgba(0,0,0,1);
-	background-color: #EA907A;
+	background-color: #5DADE2;
 }
 .container {
     padding: 16px;
@@ -66,6 +68,16 @@ h1, h2, h3, h4{
 	background-color: #EA907A;
 }
 
+.workexperience {
+    width: 1000px !important;
+    height: auto;
+	background-color: #fff;
+    border: none;
+    box-shadow: 14px 10px 0px -1px rgba(0,0,0,1);
+	background-color: #FA8072;
+}
+
+
 .skills {
     width: 705px !important;
     height: 229px !important;
@@ -79,8 +91,17 @@ h1, h2, h3, h4{
     /* width: 200px; */
     background-image: url('assets/header.png');
     background-size: cover;
-
+    /* padding: 0; */
+    height: 50vh;
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
+    padding: 0;
+    padding-left: 25px;
+    padding-bottom: 25px;
+    /* padding-bottom: 0px; */
 }
+
 
 .jumbotron img {
     height: 100px;
@@ -118,4 +139,20 @@ ul {
     font-weight: 500;
 }
 
- 
+.m-3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+#sosmed {
+    display: flex;
+    
+}
+
+#sosmed > h5 {
+    margin-right: 20px;
+    
+}
+
